--- a/Payroll.MVC/appsettings.json
+++ b/Payroll.MVC/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TaxCalcDb": "Server=(localdb)\\mssqllocaldb;Database=TaxCalcDb;Trusted_Connection=True;MultipleActiveResultSets=true"
 }
