--- a/Payroll.MVC/Payroll.MVC.csproj
+++ b/Payroll.MVC/Payroll.MVC.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Views\TaxCalculator\" />
+    <Folder Include="Views\Home\" />
   </ItemGroup>
 
   <ItemGroup>
