Add Local Sql Server Project

--- a/Payroll.MVC/appsettings.json
+++ b/Payroll.MVC/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "TaxCalcDb": "Server=(localdb)\\mssqllocaldb;Database=TaxCalcDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "TaxCalcDb": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=[CurrentDirectory]\\Local\\TaxCalcDb.mdf;Integrated Security=True;Connect Timeout=5"
 }
