--- a/Payroll.MVC/appsettings.json
+++ b/Payroll.MVC/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "TaxCalcDb": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=[CurrentDirectory]\\Local\\TaxCalcDb.mdf;Integrated Security=True;Connect Timeout=5"
+  "TaxCalcDb": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=[CurrentDirectory]\\App_Data\\TaxCalcDb_Primary.mdf;Integrated Security=True;Connect Timeout=5"
 }
